// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #2A506F;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  -webkit-transition-property: color, background-color, border-color, box-shadow;
  transition-property: color, background-color, border-color, box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c2:hover {
  box-shadow: 0px 0px 0px 2px #2A506F;
}

.c0 {
  font-family: 'Nunito',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  font-family: CircularStd,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  height: 38px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 svg {
  color: inherit !important;
  font-size: 0.925em;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3 {
  color: #3c3e42;
  border-color: #2A506F;
}

.c3 svg {
  color: #527699 !important;
}

.c3:hover:enabled,
.c3:focus:enabled,
.c3:active:enabled {
  box-shadow: none;
  background: #2A506F;
  border-color: #2A506F;
  color: white;
  opacity: undefined;
}

.c3:hover:enabled svg,
.c3:focus:enabled svg,
.c3:active:enabled svg {
  color: white !important;
}

.c1 {
  font-family: 'Nunito',Arial,sans-serif;
  font-size: 14px;
}

.c1 h1,
.c1 h2,
.c1 h3,
.c1 h4,
.c1 h5,
.c1 h6,
.c1 button {
  font-family: CircularStd,Arial,sans-serif;
}

<div
  className="c0 c1"
>
  <button
    className="c2 c3 "
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Styled Anchor Button renders correctly 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #2A506F;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  -webkit-transition-property: color, background-color, border-color, box-shadow;
  transition-property: color, background-color, border-color, box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c2:hover {
  box-shadow: 0px 0px 0px 2px #2A506F;
}

.c0 {
  font-family: 'Nunito',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  font-family: CircularStd,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  height: 38px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 svg {
  color: inherit !important;
  font-size: 0.925em;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3 {
  color: #3c3e42;
  border-color: #2A506F;
}

.c3 svg {
  color: #527699 !important;
}

.c3:hover:enabled,
.c3:focus:enabled,
.c3:active:enabled {
  box-shadow: none;
  background: #2A506F;
  border-color: #2A506F;
  color: white;
  opacity: undefined;
}

.c3:hover:enabled svg,
.c3:focus:enabled svg,
.c3:active:enabled svg {
  color: white !important;
}

.c4 {
  margin: 8px;
}

.c1 {
  font-family: 'Nunito',Arial,sans-serif;
  font-size: 14px;
}

.c1 h1,
.c1 h2,
.c1 h3,
.c1 h4,
.c1 h5,
.c1 h6,
.c1 button {
  font-family: CircularStd,Arial,sans-serif;
}

<div
  className="c0 c1"
>
  <a
    className="c2 c3 c4"
    href="#"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Click me
  </a>
</div>
`;

exports[`Styled Button renders correctly 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #2A506F;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  -webkit-transition-property: color, background-color, border-color, box-shadow;
  transition-property: color, background-color, border-color, box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c2:hover {
  box-shadow: 0px 0px 0px 2px #2A506F;
}

.c0 {
  font-family: 'Nunito',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  font-family: CircularStd,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  height: 38px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 svg {
  color: inherit !important;
  font-size: 0.925em;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3 {
  color: #3c3e42;
  border-color: #2A506F;
}

.c3 svg {
  color: #527699 !important;
}

.c3:hover:enabled,
.c3:focus:enabled,
.c3:active:enabled {
  box-shadow: none;
  background: #2A506F;
  border-color: #2A506F;
  color: white;
  opacity: undefined;
}

.c3:hover:enabled svg,
.c3:focus:enabled svg,
.c3:active:enabled svg {
  color: white !important;
}

.c4 {
  margin: 8px;
}

.c1 {
  font-family: 'Nunito',Arial,sans-serif;
  font-size: 14px;
}

.c1 h1,
.c1 h2,
.c1 h3,
.c1 h4,
.c1 h5,
.c1 h6,
.c1 button {
  font-family: CircularStd,Arial,sans-serif;
}

<div
  className="c0 c1"
>
  <button
    className="c2 c3 c4"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Click me
  </button>
</div>
`;
